[package]
name = "lwe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rayon = "1.10.0"
zerocopy = { version="0.8.14", features = ["derive", "std"] }


[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name= "lwe_bench"
harness = false